--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -9,9 +9,9 @@ How to port NAT3D server daemon to a NAT box such as a wifi router. This also se
 You need to install some open source Linux firmware for NAT3D first. OpenWRT and DD-WRT are examples. Its easier to install all required libraries on OpenWRT.
 
   * To install OpenWRT, look [http://wiki.openwrt.org/doc/howto/installing]. You can download the correct firmware for OpenWRT from the site.
-  * Some excellent instructions about installation of firmware is at the [http://www.dd-wrt.com/wiki/index.php/Installation here DD-WRT site]. This is generally applicable to all open source firmware for NATs. It is recommended to follow instructions from here even if you want to install OpenWRT especially regarding how to reset the router, flash the router with the new firmware, and router-specific details that DD-WRT provides [http://www.dd-wrt.com/site/support/router-database here]
+  * Some excellent instructions about installation of firmware is at the [http://www.dd-wrt.com/wiki/index.php/Installation here DD-WRT site]. This is generally applicable to all open source firmware for NATs. It is recommended to follow instructions from the DD-WRT site even if you want to install OpenWRT especially regarding how to reset the router, flash the router with the new firmware, and router-specific details that DD-WRT provides [http://www.dd-wrt.com/site/support/router-database here]
   * Consider glancing through the [http://www.dd-wrt.com/phpBB2/viewtopic.php?t=51486 peacock thread]. It is very useful.
-  * DD-WRT has a NAT/router-specific page http://www.dd-wrt.com/site/support/router-database here]. This contains specific details about your hardware i.e. the hardware capabilities - RAM, flash storage etc. It also contains some important router-specific details such as 
+  * DD-WRT has a NAT/router-specific page [http://www.dd-wrt.com/site/support/router-database here]. This contains specific details about your hardware i.e. the hardware capabilities - RAM, flash storage etc. It also contains some important router-specific details such as 
 
 = Install C++ library on the router =
 Once you install OpenWRT/DD-WRT (its easier to install libraries on OpenWRT), you need to install a C++ library on the router since NAT3D is written in C++. You can install either uclibc++ (a mini-library) or libstdc++ (the standard C++ library; wont fit in the space available on many NATs). To do so, do the following in the router ssh terminal:
@@ -32,22 +32,28 @@ To install the TUN device, do the following:
 ipkg update
 ipkg install kmod-tun
 }}}
-_ipkg_ may be _opkg_ depending on your firmware version/make.
+_ipkg_ may be _opkg_ depending on your firmware version/make. 
+
+You may need to create the TUN device file i.e. the UNIX filesystem interface to the TUN device (/dev/net/tun). If it does not exist at that location, create it as follows:
+
+{{{
+mkdir /dev/net
+mknod /dev/net/tun c 10 200  (Linux kernel 2.4.x)
+}}}
 
 
 = Build NAT3D server daemon for the NAT =
 
 This also serves as an introduction on how to compile a simple program for the router. Just change the options as below in the program's Makefile.
 
-  * Download the build system from [http://wiki.openwrt.org/oldwiki/buildingpackageshowto here]
+  * Download the build system/OpenWRT SDK from [http://wiki.openwrt.org/oldwiki/buildingpackageshowto here] or [http://downloads.openwrt.org/whiterussian/newest/ here]. You do not require the image builder which is for building your own firmware.
   * Install the c++ library for the build system using via a feed using _/scripts/feeds_.
-  * Edit the NAT3D makefile to remove the pcap_arp_handler, resolver and all DNS files (not required on NAT3D). Only the Tunnel manager and related files is required for the server daemon. 
+  * Below is a sample NAT3D makefile for OpenWRT. Edit the NAT3D makefile to remove the pcap_arp_handler, resolver and all DNS files (not required on NAT3D). Only the Tunnel manager and related files is required for the server daemon. 
   * In the NAT3D Makefile, set the compiler option (i.e. the CXX option) to the compiler in the package (typically located at _staging_dir/toolchain-mipsel_gcc3.4.6/bin_). You need to use the mipsel-linux-uclibc-g++ compiler.
   * Add the -nodefaultlibs and -nostdinc++ options to make sure that NAT3D is not compiled against the C++ libraries on the machine.
   * Also edit the NAT3D Makefile to link with the uclibc++ library located located within the build system by using a -L option in CFLAGS. Also use the -I option in CFLAGS to tell the Makefile where the location of the uclibc++ include directory.
-  * Make NAT3D. It will be compiled as a binary for the firmware.
-
-It is also possible to make NAT3D
+  * Make NAT3D. It will be compiled as a binary for the firmware. You can now run NAT3D as with any application (i.e. _./nat3d_)
+  * It is also possible to make a NAT3D ipkg/opkg and install the ipkg on the router.
 
 A sample makefile follows:
 {{{
