--- a/wiki/Bridge.wiki
+++ b/wiki/Bridge.wiki
@@ -1,5 +1,8 @@
 #summary Setting up a bridge in Windows/Linux
 
+= <font color="red"> Deprecated. </font> =
+NAT3D can be built for bridging mode by using the NAT3_TAP option. Please be aware that bridging does not work well with wireless interfaces. Since bridging was abandoned in Feb-March 2010, code written since then may break bridging code which was functional before Feb-March.
+
 = Introduction =
 
 Setting up a network bridge allows you to run several machines behind a NAT box, run NAT3D on only one machine, and allow connectivity to all the machines behind the NAT box.
