--- a/wiki/WinDevelNotes.wiki
+++ b/wiki/WinDevelNotes.wiki
@@ -3,12 +3,14 @@
 = Introduction =
 
   * Windows uses the TUN/TAP driver from OpenVPN. Instructions to download and install are [WindowsInstallation here].
-  * The driver is used in the TAP mode mainly to support ethernet-TAP [http://openvpn.net/bridge.html bridging].
+  * <font color="red"> Bridging abandoned. NAT3D uses routing instead </font>. The driver is used in the TAP mode mainly to support ethernet-TAP [http://openvpn.net/bridge.html bridging].
+  * 
 
-= Specific notes w.r.t Network behavior of the TUN/TAP device =
+= Specific notes w.r.t Network behavior of the TAP device =
   * You must handle ARP for the network device. 
-  * Replying to a query for an ARP request that asks for the address on the TUN/TAP device results in windows auto-configuring that device.
-  * ARP queries for any network address in the TUN/TAP network should be replied with a different MAC address from that of the adapter (unlike Linux).
+  * Replying to a query for an ARP request that asks for the address on the TUN/TAP device results in windows auto-configuring that device. See the source code for further details.
+  * ARP queries for any network address in the TAP network should be replied with a different MAC address from that of the adapter (unlike Linux). See the source code for further details.
+
 
 = References =
   * http://www.varsanofiev.com/inside/using_tuntap_under_windows.htm
