--- a/wiki/NATTTFlowchart.wiki
+++ b/wiki/NATTTFlowchart.wiki
@@ -1,6 +1,8 @@
 #summary NATTT Flowchart
 
-This shows NAT3D working as a client
+<font color="red"> Bridging abandoned. NAT3D uses routing instead. Refer the design document in the svn repository, under nat3d/docs </font>.
+
+This shows NAT3D working as a client in bridging mode.
 
 http://img214.imageshack.us/img214/5789/slide2v.jpg
 
