Edited wiki page through web user interface.

--- a/wiki/RunningNATTT.wiki
+++ b/wiki/RunningNATTT.wiki
@@ -10,13 +10,17 @@ _./nat3d <config file>_
 
 = Server/Client =
 
-The same application can function as both the server and the client. You may need to change the [ConfigFile config file] accordingly. Its also required to forward the port from the NAT box to the port that NAT3D listens on (option in the config file).
+The same application can function as both the server and the client. You need to change the [ConfigFile config file] accordingly. When run as server, it is also required to forward the port from the NAT box to the port that NAT3D listens on (option in the config file).
 
 = Details =
 
   * NAT3D can be built with stderr debugging support enabled. To do this, please use the -DDEBUG flag in the Makefile (Mac/Linux/UNIX only).
 
-= Bridging =
+
+
+= Bridging  <font color="red">(deprecated) - no longer required</font> =
+
+ <font color="red"> NAT3D now automates the process of sending packets/receiving to/from other hosts.</font>
 
 To make other machines behind the NAT box accessible to NAT3D, and effectively to external hosts, you may need to create a [Bridge software bridge] between the TAP device and your internet interface.
 
