--- a/wiki/Bridge.wiki
+++ b/wiki/Bridge.wiki
@@ -1,4 +1,5 @@
 #summary Setting up a bridge in Windows/Linux
+#labels Deprecated
 
 = <font color="red"> Deprecated. </font> =
 <font color="red"> Document no longer in use. Provided so that future attempts to revive bridging. </font>
