--- a/wiki/ConfigFile.wiki
+++ b/wiki/ConfigFile.wiki
@@ -53,8 +53,8 @@ Example: resolver = 127.0.0.1
 
 == IP address of the interface used for tunneling (option: _ip_) ==
 
-For the server, this is typically the interface connecting to the NAT i.e. Wifi or Ethernet. 
-For the client, this is the interface that connects to the Internet. It can be the same as the interface connecting to the NAT depending on your configuration.
+For the NAT3D server, this is typically the interface connecting to the NAT i.e. Wifi or Ethernet. 
+For the NAT3D client, this is the interface that connects to the Internet. It can be the same as the interface connecting to the NAT depending on your configuration.
 
 Example: _ip = a.b.c.d_
 
