Edited wiki page through web user interface.

--- a/wiki/BINDDynDNS.wiki
+++ b/wiki/BINDDynDNS.wiki
@@ -20,6 +20,6 @@ Where xx represent the external IP address.
 
 Where 5.nattt is the domain name.
 
-\# 10 xx xx xx xx 26 94 0a 00 00 05 10 represents size of following data. xx xx xx xx is external IP. 26 94 is the port number 9876. 0a 00 00 05 is the address within the NAT. 
+\# 10 represents size of following data. xx xx xx xx is external IP. 26 94 is the port number 9876. 0a 00 00 05 is the address within the NAT. 
 
 It is further described [http://code.google.com/p/nat3d-dns/wiki/CustomRecord here].
