--- a/wiki/WindowsInstallation.wiki
+++ b/wiki/WindowsInstallation.wiki
@@ -7,10 +7,11 @@ Installation on Windows requires 2 major steps:
   # Installation of TUN/TAP driver from OpenVPN
   # Disabling the firewall from blocking traffic on the TUN/TAP Device
 
+All libraries/drivers below are found in the SVN repository under _/branch/tdsmapper/nat3_libs_. Use this in case the drivers/libs are no longer available.
 
 = Installation of the TUN/TAP driver from OpenVPN =
 
-As of now, the easiest way to get this done is by downloading the [http://openvpn.net/index.php/open-source/downloads.html OpenVPN] Windows Installer (1 MB in size). You may also find it in the SVN repository.
+As of now, the easiest way to get this done is by downloading the [http://openvpn.net/index.php/open-source/downloads.html OpenVPN] Windows Installer (1 MB in size). 
 
 Once you have downloaded the OpenVPN Windows installer, open it, and install only the TAP-WIN32 driver from the "Choose Components" screen.
 
