Edited wiki page through web user interface.

--- a/wiki/LinuxInstallation.wiki
+++ b/wiki/LinuxInstallation.wiki
@@ -1,9 +1,11 @@
 #summary Installation of NAT3D on Linux
 #labels Phase-Deploy
 
+All libraries/drivers below are found in the SVN repository under _/branch/tdsmapper/nat3_libs_. Use this in case the drivers/libs are no longer available.
+
 = Additional software/drivers =
   * The TUN/TAP driver should be installed on most modern Linux operating systems. In case it is not present, please find it [http://vtun.sourceforge.net/tun/index.html here].
-  * Please install the libpcap library. You need the one from tcpdump, not the other libpcap. You may find it in the SVN repository.
+  * Please install the libpcap library. You need the one [http://www.tcpdump.org from tcpdump], not the other libpcap. 
 
 = Details =
 
